--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 
 group = 'io.github.sollyu'
-version = '1.1.2'
+version = '1.1.3'
 
 repositories {
+    maven { url 'https://maven.aliyun.com/repository/public' }
+    maven { url 'https://maven.aliyun.com/repository/google' }
     mavenCentral()
 }
 
@@ -12,6 +14,7 @@ dependencies {
     implementation "org.jetbrains:annotations:24.0.1"
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'com.google.guava:guava:30.1.1-jre'
 }
 
 test {
