--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 
 group = 'io.github.sollyu'
-version = '1.1.3'
+version = '1.1.8'
 
 repositories {
     maven { url 'https://maven.aliyun.com/repository/public' }
@@ -17,6 +17,11 @@ dependencies {
     testImplementation 'com.google.guava:guava:30.1.1-jre'
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
 test {
     useJUnitPlatform()
 }
@@ -28,27 +33,7 @@ tasks.register('sourcesJar', Jar) {
 }
 
 publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            artifactId "struct"
-            from components.java
-            artifact sourcesJar
-        }
-    }
     repositories {
         mavenLocal()
-        maven {
-            name = "Gitea"
-            url = uri("https://git.frp.9x6.cn/api/packages/sollyu/maven")
-
-            credentials(HttpHeaderCredentials) {
-                name = "Authorization"
-                value = "token ${System.getenv("GITEA_PUBLISH_TOKEN")}"
-            }
-
-            authentication {
-                header(HttpHeaderAuthentication)
-            }
-        }
     }
 }
