--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,24 @@
+/*
+ * Copyright (c) 2023-2025 sollyu.com..
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 
 group = 'io.github.sollyu'
-version = '1.1.8'
+version = '1.1.9'
 
 repositories {
     maven { url 'https://maven.aliyun.com/repository/public' }
@@ -14,7 +30,7 @@ dependencies {
     implementation "org.jetbrains:annotations:24.0.1"
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'com.google.guava:guava:30.1.1-jre'
+    testImplementation 'com.google.guava:guava:32.0.0-jre'
 }
 
 java {
