--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2023 sollyu.com.
+# Copyright (c) 2023-2025 sollyu.com..
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,7 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
 #Fri Aug 04 23:30:42 CST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
